Добавляет спрайты и 2х изображения

--- a/source/index.html
+++ b/source/index.html
@@ -14,7 +14,7 @@
       <header class="header">
         <h1 class="visually-hidden">Интернет-магазин Автозапчастей: Главная</h1>
         <a class="header__logo">
-          <img src="img/logo.svg" width="102" height="52" alt="Логотип интернет-магазина запчастей: покрышка с крыльями.">
+          <img src="img/logo.webp" width="102" height="52" alt="Логотип интернет-магазина запчастей: покрышка с крыльями.">
         </a>
         <nav class="header__nav nav">
           <div class="nav__wrapper">
@@ -112,12 +112,12 @@
           <div class="promo__slider slider">
             <h3 class="visually-hidden">Слайдер с текущими предложениями.</h3>
             <div class="slider__images">
-              <img src="../img/promo.webp" width="870" height="397" alt="Фото автогенератора на фиолетово-оранжевом градиенте и надпись: 'Запчасти на все виды автомобилей'.">
-              <img src="../img/promo.webp" width="870" height="397" alt="Фото автогенератора на фиолетово-оранжевом градиенте и надпись: 'Запчасти на все виды автомобилей'.">
-              <img src="../img/promo.webp" width="870" height="397" alt="Фото автогенератора на фиолетово-оранжевом градиенте и надпись: 'Запчасти на все виды автомобилей'.">
-              <img src="../img/promo.webp" width="870" height="397" alt="Фото автогенератора на фиолетово-оранжевом градиенте и надпись: 'Запчасти на все виды автомобилей'.">
-              <img src="../img/promo.webp" width="870" height="397" alt="Фото автогенератора на фиолетово-оранжевом градиенте и надпись: 'Запчасти на все виды автомобилей'.">
-              <img src="../img/promo.webp" width="870" height="397" alt="Фото автогенератора на фиолетово-оранжевом градиенте и надпись: 'Запчасти на все виды автомобилей'.">
+              <img src="../img/promo.webp" srcset="../img/promo@2x.webp 2x" width="870" height="397" alt="Фото автогенератора на фиолетово-оранжевом градиенте и надпись: 'Запчасти на все виды автомобилей'.">
+              <img src="../img/promo.webp" srcset="../img/promo@2x.webp 2x" width="870" height="397" alt="Фото автогенератора на фиолетово-оранжевом градиенте и надпись: 'Запчасти на все виды автомобилей'.">
+              <img src="../img/promo.webp" srcset="../img/promo@2x.webp 2x" width="870" height="397" alt="Фото автогенератора на фиолетово-оранжевом градиенте и надпись: 'Запчасти на все виды автомобилей'.">
+              <img src="../img/promo.webp" srcset="../img/promo@2x.webp 2x" width="870" height="397" alt="Фото автогенератора на фиолетово-оранжевом градиенте и надпись: 'Запчасти на все виды автомобилей'.">
+              <img src="../img/promo.webp" srcset="../img/promo@2x.webp 2x" width="870" height="397" alt="Фото автогенератора на фиолетово-оранжевом градиенте и надпись: 'Запчасти на все виды автомобилей'.">
+              <img src="../img/promo.webp" srcset="../img/promo@2x.webp 2x" width="870" height="397" alt="Фото автогенератора на фиолетово-оранжевом градиенте и надпись: 'Запчасти на все виды автомобилей'.">
             </div>
             <button class="slider__prev-button" type="button" title="Назад">
               <span class="visually-hidden">Кнопка назад.</span>
@@ -144,7 +144,7 @@
                 <span class="action__old-price">500 ₽</span>
                 <a class="action__link" href="#">
                   <span class="visually-hidden">Перейти на страницу товара.</span>
-                  <img src="../img/lamp.webp" width="150" height="187" alt="Фото лампы на белом фоне">
+                  <img src="../img/lamp.webp" srcset="../img/lamp@2x.webp 2x" width="150" height="187" alt="Фото лампы на белом фоне">
                 </a>
                 <span class="action__product">Лампочка мини...</span>
                 <div class="action__timer countdown">
@@ -177,7 +177,7 @@
                 <span class="action__old-price">700 ₽</span>
                 <a class="action__link" href="#">
                   <span class="visually-hidden">Перейти на страницу товара.</span>
-                  <img src="../img/lamp.webp" width="150" height="187" alt="Фото лампы на белом фоне">
+                  <img src="../img/lamp.webp" srcset="../img/lamp@2x.webp 2x" width="150" height="187" alt="Фото лампы на белом фоне">
                 </a>
                 <span class="action__product">Лампочка макси...</span>
                 <div class="action__timer countdown-2">
@@ -210,7 +210,7 @@
                 <span class="action__old-price">600 ₽</span>
                 <a class="action__link" href="#">
                   <span class="visually-hidden">Перейти на страницу товара.</span>
-                  <img src="../img/lamp.webp" width="150" height="187" alt="Фото лампы на белом фоне">
+                  <img src="../img/lamp.webp" srcset="../img/lamp@2x.webp 2x" width="150" height="187" alt="Фото лампы на белом фоне">
                 </a>
                 <span class="action__product">Лампочка миди...</span>
                 <div class="action__timer countdown-3">
@@ -370,7 +370,7 @@
                 <button class="card__buttonlikes" type="button" title="Добавить в избранное">
                   <span class="visually-hidden" >Добавить в избранное.</span>
                 </button>
-                <img class="card__img" src="../img/goods1.webp" width="230" height="215" alt="Фото чёрного ремня с серебристыми карабинами на белом фоне.">
+                <img class="card__img" src="../img/goods1.webp" srcset="../img/goods1@2x.webp 2x" width="230" height="215" alt="Фото чёрного ремня с серебристыми карабинами на белом фоне.">
                 <button class="card__button-viewing" type="button">
                   <span class="card__button-viewing-text">быстрый просмотр</span>
                 </button>
@@ -390,7 +390,7 @@
                   <span class="visually-hidden" >Добавить в избранное.</span>
                 </button>
                 <span class="card__icon-winter"></span>
-                <img class="card__img" src="../img/goods2.webp" width="151" height="81" alt="Фото зимней шины в сборе с шестилучевым диском на белом фоне.">
+                <img class="card__img" src="../img/goods2.webp" srcset="../img/goods2@2x.webp 2x" width="151" height="81" alt="Фото зимней шины в сборе с шестилучевым диском на белом фоне.">
                 <button class="card__button-viewing" type="button">
                   <span class="card__button-viewing-text">быстрый просмотр</span>
                 </button>
@@ -409,7 +409,7 @@
                 <button class="card__buttonlikes" type="button"title="Добавить в избранное">
                   <span class="visually-hidden" >Добавить в избранное.</span>
                 </button>
-                <img class="card__img" src="../img/goods3.webp" width="232" height="174" alt="Фото блок-фары на белом фоне.">
+                <img class="card__img" src="../img/goods3.webp" srcset="../img/goods3@2x.webp 2x" width="232" height="174" alt="Фото блок-фары на белом фоне.">
                 <button class="card__button-viewing" type="button">
                   <span class="card__button-viewing-text">быстрый просмотр</span>
                 </button>
@@ -429,7 +429,7 @@
                   <span class="visually-hidden" >Добавить в избранное.</span>
                 </button>
                 <span class="card__icon-summer"></span>
-                <img class="card__img" src="../img/goods4.webp" width="151" height="181" alt="Фото летней шины в сборе с пятилучевым диском на белом фоне.">
+                <img class="card__img" src="../img/goods4.webp" srcset="../img/goods4@2x.webp 2x" width="151" height="181" alt="Фото летней шины в сборе с пятилучевым диском на белом фоне.">
                 <button class="card__button-viewing card__button-viewing--none" type="button">
                   <span class="card__button-viewing-text">быстрый просмотр</span>
                 </button>
@@ -448,7 +448,7 @@
                 <button class="card__buttonlikes" type="button"title="Добавить в избранное">
                   <span class="visually-hidden" >Добавить в избранное.</span>
                 </button>
-                <img class="card__img" src="../img/goods3.webp" width="232" height="174" alt="Фото блок-фары на белом фоне.">
+                <img class="card__img" src="../img/goods3.webp" srcset="../img/goods3@2x.webp 2x" width="232" height="174" alt="Фото блок-фары на белом фоне.">
                 <button class="card__button-viewing" type="button">
                   <span class="card__button-viewing-text">быстрый просмотр</span>
                 </button>
@@ -467,7 +467,7 @@
                 <button class="card__buttonlikes" type="button" title="Добавить в избранное">
                   <span class="visually-hidden" >Добавить в избранное.</span>
                 </button>
-                <img class="card__img" src="../img/goods1.webp" width="230" height="215" alt="Фото чёрного ремня с серебристыми карабинами на белом фоне">
+                <img class="card__img" src="../img/goods1.webp" srcset="../img/goods1@2x.webp 2x" width="230" height="215" alt="Фото чёрного ремня с серебристыми карабинами на белом фоне">
                 <button class="card__button-viewing" type="button">
                   <span class="card__button-viewing-text">быстрый просмотр</span>
                 </button>
@@ -487,7 +487,7 @@
                   <span class="visually-hidden" >Добавить в избранное.</span>
                 </button>
                 <span class="card__icon-winter"></span>
-                <img class="card__img" src="../img/goods2.webp" width="151" height="81" alt="Фото зимней шины в сборе с шестилучевым диском на белом фоне.">
+                <img class="card__img" src="../img/goods2.webp" srcset="../img/goods2@2x.webp 2x" width="151" height="81" alt="Фото зимней шины в сборе с шестилучевым диском на белом фоне.">
                 <button class="card__button-viewing" type="button">
                   <span class="card__button-viewing-text">быстрый просмотр</span>
                 </button>
@@ -506,7 +506,7 @@
                 <button class="card__buttonlikes" type="button" title="Добавить в избранное">
                   <span class="visually-hidden" >Добавить в избранное.</span>
                 </button>
-                <img class="card__img" src="../img/goods4.webp" width="151" height="181" alt="Фото летней шины в сборе с шестилучевым диском на белом фоне.">
+                <img class="card__img" src="../img/goods4.webp" srcset="../img/goods4@2x.webp 2x" width="151" height="181" alt="Фото летней шины в сборе с шестилучевым диском на белом фоне.">
                 <button class="card__button-viewing card__button-viewing--none" type="button">
                   <span class="card__button-viewing-text">быстрый просмотр</span>
                 </button>
@@ -534,7 +534,7 @@
         <section class="sale">
           <h3 class="visually-hidden">Sale до 50% на все колёса.</h3>
           <button class="sale__button" type="button">
-            <img class="sale__img" src="img/sale.webp" width="1170" height="165" alt="Летящиe в воздухе колёса на сиренево-оранжевом градиенте и надписью о распродаже.">
+            <img class="sale__img" src="../img/sale.webp" srcset="../img/sale@2x 2x" width="1170" height="165" alt="Летящиe в воздухе колёса на сиренево-оранжевом градиенте и надписью о распродаже.">
           </button>
         </section>
 
@@ -571,7 +571,7 @@
                 <button class="with__card__buttonlikes" type="button" title="Добавить в избранное">
                   <span class="visually-hidden" >Добавить в избранное.</span>
                 </button>
-                <img class="with-card__img" src="../img/goods4.webp" width="151" height="181" alt="Фото летней шины в сборе с шестилучевым диском на белом фоне.">
+                <img class="with-card__img" src="../img/goods4.webp" srcset="../img/goods4@2x.webp 2x" width="151" height="181" alt="Фото летней шины в сборе с шестилучевым диском на белом фоне.">
                 <button class="with-card__button-viewing with-card__button-viewing--none" type="button">
                   <span class="with-card__button-viewing-text">быстрый просмотр</span>
                 </button>
@@ -591,7 +591,7 @@
                   <span class="visually-hidden" >Добавить в избранное.</span>
                 </button>
                 <span class="with-card__icon-winter"></span>
-                <img class="with-card__img" src="../img/goods4.webp" width="151" height="181" alt="Фото летней шины в сборе с шестилучевым диском на белом фоне.">
+                <img class="with-card__img" src="../img/goods4.webp" srcset="../img/goods4@2x.webp 2x" width="151" height="181" alt="Фото летней шины в сборе с шестилучевым диском на белом фоне.">
                 <button class="with-card__button-viewing" type="button">
                   <span class="with-card__button-viewing-text">быстрый просмотр</span>
                 </button>
@@ -610,7 +610,7 @@
                 <button class="with__card__buttonlikes" type="button"title="Добавить в избранное">
                   <span class="visually-hidden" >Добавить в избранное.</span>
                 </button>
-                <img class="with-card__img" src="../img/goods4.webp" width="151" height="181" alt="Фото летней шины в сборе с шестилучевым диском на белом фоне.">
+                <img class="with-card__img" src="../img/goods4.webp" srcset="../img/goods4@2x.webp 2x" width="151" height="181" alt="Фото летней шины в сборе с шестилучевым диском на белом фоне.">
                 <button class="with-card__button-viewing with-card__button-viewing--none" type="button">
                   <span class="with-card__button-viewing-text">быстрый просмотр</span>
                 </button>
@@ -630,7 +630,7 @@
                   <span class="visually-hidden" >Добавить в избранное.</span>
                 </button>
                 <span class="with-card__icon-summer"></span>
-                <img class="with-card__img" src="../img/goods4.webp" width="151" height="181" alt="Фото летней шины в сборе с шестилучевым диском на белом фоне.">
+                <img class="with-card__img" src="../img/goods4.webp" srcset="../img/goods4@2x.webp 2x" width="151" height="181" alt="Фото летней шины в сборе с шестилучевым диском на белом фоне.">
                 <button class="with-card__button-viewing with-card__button-viewing--none" type="button">
                   <span class="with-card__button-viewing-text">быстрый просмотр</span>
                 </button>
@@ -649,7 +649,7 @@
                 <button class="with__card__buttonlikes" type="button"title="Добавить в избранное">
                   <span class="visually-hidden" >Добавить в избранное.</span>
                 </button>
-                <img class="with-card__img" src="../img/goods4.webp" width="151" height="181" alt="Фото летней шины в сборе с шестилучевым диском на белом фоне.">
+                <img class="with-card__img" src="../img/goods4.webp"srcset="../img/goods4@2x.webp 2x"  width="151" height="181" alt="Фото летней шины в сборе с шестилучевым диском на белом фоне.">
                 <button class="with-card__button-viewing" type="button">
                   <span class="with-card__button-viewing-text">быстрый просмотр</span>
                 </button>
@@ -668,7 +668,7 @@
                 <button class="with__card__buttonlikes" type="button" title="Добавить в избранное">
                   <span class="visually-hidden" >Добавить в избранное.</span>
                 </button>
-                <img class="with-card__img" src="../img/goods4.webp" width="151" height="181" alt="Фото летней шины в сборе с шестилучевым диском на белом фоне.">
+                <img class="with-card__img" src="../img/goods4.webp" srcset="../img/goods4@2x.webp 2x" width="151" height="181" alt="Фото летней шины в сборе с шестилучевым диском на белом фоне.">
                 <button class="with-card__button-viewing" type="button">
                   <span class="with-card__button-viewing-text">быстрый просмотр</span>
                 </button>
@@ -688,7 +688,7 @@
                   <span class="visually-hidden" >Добавить в избранное.</span>
                 </button>
                 <span class="with-card__icon-winter"></span>
-                <img class="with-card__img" src="../img/goods4.webp" width="151" height="181" alt="Фото летней шины в сборе с шестилучевым диском на белом фоне.">
+                <img class="with-card__img" src="../img/goods4.webp" srcset="../img/goods4@2x.webp 2x" width="151" height="181" alt="Фото летней шины в сборе с шестилучевым диском на белом фоне.">
                 <button class="with-card__button-viewing" type="button">
                   <span class="with-card__button-viewing-text">быстрый просмотр</span>
                 </button>
@@ -707,7 +707,7 @@
                 <button class="with__card__buttonlikes" type="button" title="Добавить в избранное">
                   <span class="visually-hidden" >Добавить в избранное.</span>
                 </button>
-                <img class="with-card__img" src="../img/goods4.webp" width="151" height="181" alt="Фото летней шины в сборе с шестилучевым диском на белом фоне.">
+                <img class="with-card__img" src="../img/goods4.webp" srcset="../img/goods4@2x.webp 2x" width="151" height="181" alt="Фото летней шины в сборе с шестилучевым диском на белом фоне.">
                 <button class="with-card__button-viewing with-card__button-viewing--none" type="button">
                   <span class="with-card__button-viewing-text">быстрый просмотр</span>
                 </button>
