Добавляет секцию хлебных крошек

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -103,10 +103,24 @@
             </li>
           </ul>
         </nav>
-
       </header>
 
       <main class="main">
+        <h1 class="visually-hidden">Поиск зимних шин</h1>
+        <section class="breadcrumbs">
+          <h2 class="visually-hidden">Путь на главную страницу.</h2>
+          <ul class="breadcrumbs-list">
+            <li class="breadcrumbs-item">
+              <a class="breadcrumbs-link" href="index.html">Главная</a>
+            </li>
+            <li class="breadcrumbs-item">
+              <a class="breadcrumbs-link" href="#">Шины</a>
+            </li>
+            <li class="breadcrumbs-item">
+              <a class="breadcrumbs-link">Шины зимние</a>
+            </li>
+          </ul>
+        </section>
       </main>
 
       <footer class="footer">
