--- a/source/index.html
+++ b/source/index.html
@@ -72,7 +72,7 @@
               </a>
             </li>
             <li class="list-goods__item goods">
-              <a class="goods__link goods__link--current" href="catalog.html">
+              <a class="goods__link goods__link--current" href="#">
                 Шины
               </a>
             </li>
