Adds a defer parameter

--- a/source/index.html
+++ b/source/index.html
@@ -812,18 +812,18 @@
       </footer>
     </div>
 
-  <script src="js/nav-goods.js"></script>
-  <script src="js/promo-slider.js"></script>
-  <script src="js/action-slider.js"></script>
-  <script src="js/countdown.js"></script>
-  <script src="js/countdown-2.js"></script>
-  <script src="js/countdown-3.js"></script>
-  <script src="js/search.js"></script>
-  <script src="js/popular.js"></script>
-  <script src="js/popular-slider.js"></script>
-  <script src="js/popular-like.js"></script>
-  <script src="js/with.js"></script>
-  <script src="js/with-slider.js"></script>
-  <script src="js/with-like.js"></script>
+  <script defer src="js/nav-goods.js"></script>
+  <script defer src="js/promo-slider.js"></script>
+  <script defer src="js/action-slider.js"></script>
+  <script defer src="js/countdown.js"></script>
+  <script defer src="js/countdown-2.js"></script>
+  <script defer src="js/countdown-3.js"></script>
+  <script defer src="js/search.js"></script>
+  <script defer src="js/popular.js"></script>
+  <script defer src="js/popular-slider.js"></script>
+  <script defer src="js/popular-like.js"></script>
+  <script defer src="js/with.js"></script>
+  <script defer src="js/with-slider.js"></script>
+  <script defer src="js/with-like.js"></script>
   </body>
 </html>
