--- a/source/index.html
+++ b/source/index.html
@@ -35,7 +35,7 @@
                 </a>
               </li>
               <li class="nav-list__item">
-                <a class="nav-list__link" href="#">
+                <a class="nav-list__link" href="#" style="font-family: Proxima Nova; font-size: 21px;">
                   Санкт-Петербург, ул<br>Большая Конюшенная, д 19
                 </a>
               </li>
